fixed album cover not showing up

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -27,8 +27,6 @@
   vertical-align: inherit;
 }
 .album-cover {
-  max-width: 140px;
-  max-height: 140px;
   margin-right: 10px;
 }
 
